--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.4
 anyio==4.10.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
@@ -11,6 +12,7 @@ bleach==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+colorlog==6.9.0
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -22,10 +24,13 @@ executing==2.2.1
 fastjsonschema==2.21.2
 fonttools==4.59.0
 fqdn==1.5.1
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+-e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@610f16cdcceff955487197e17468aba1c403f48c#egg=ifood
+-e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@610f16cdcceff955487197e17468aba1c403f48c#egg=ifood_case
 ipykernel==6.30.1
 ipython==9.5.0
 ipython_pygments_lexers==1.1.1
@@ -54,6 +59,7 @@ kiwisolver==1.4.8
 lark==1.2.2
 lightgbm==4.6.0
 lz4==4.4.4
+Mako==1.3.10.dev0
 MarkupSafe==3.0.2
 matplotlib==3.10.5
 matplotlib-inline==0.1.7
@@ -66,6 +72,8 @@ notebook==7.4.5
 notebook_shim==0.2.4
 numpy==2.3.2
 openpyxl==3.1.5
+optuna==4.5.0
+optuna-integration==4.5.0
 packaging==25.0
 pandas==2.3.1
 pandocfilters==1.5.1
@@ -102,15 +110,17 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
+SQLAlchemy==2.0.42
 stack-data==0.6.3
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tkinter==3.13.7
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250822
-typing_extensions==4.15.0
+typing_extensions==4.14.1
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
