--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ bleach==6.2.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+cloudpickle==3.1.1
 colorlog==6.9.0
 comm==0.2.3
 contourpy==1.3.3
@@ -29,8 +30,8 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
--e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@610f16cdcceff955487197e17468aba1c403f48c#egg=ifood
--e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@610f16cdcceff955487197e17468aba1c403f48c#egg=ifood_case
+-e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@37b3df7c0742aba7bb7ee16175b90059ded7ecfa#egg=ifood
+-e git+ssh://git@github.com/FelipeMarcelino/ifood-case.git@37b3df7c0742aba7bb7ee16175b90059ded7ecfa#egg=ifood_case
 ipykernel==6.30.1
 ipython==9.5.0
 ipython_pygments_lexers==1.1.1
@@ -58,6 +59,7 @@ jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
 lark==1.2.2
 lightgbm==4.6.0
+llvmlite==0.45.0rc1
 lz4==4.4.4
 Mako==1.3.10.dev0
 MarkupSafe==3.0.2
@@ -70,6 +72,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.5
 notebook_shim==0.2.4
+numba==0.62.0rc1
 numpy==2.3.2
 openpyxl==3.1.5
 optuna==4.5.0
@@ -107,7 +110,9 @@ scipy==1.16.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==80.9.0
+shap==0.48.0
 six==1.17.0
+slicer==0.0.8
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.42
